--- a/package.json
+++ b/package.json
@@ -9,19 +9,42 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/switch": "^2.2.8",
+    "bcrypt": "^5.1.1",
+    "clsx": "^2.1.1",
+    "first-app-innovare": "file:",
+    "form-data": "^4.0.1",
+    "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "mailgun.js": "^11.1.0",
+    "mongoose": "^8.9.5",
+    "next": "15.1.6",
+    "next-auth": "^4.24.11",
+    "next-intl": "^3.26.3",
+    "next-themes": "^0.4.4",
+    "nlpcloud": "^2.0.8",
+    "nodemailer": "^6.10.0",
+    "openai": "^4.80.1",
     "react": "^19.0.0",
+    "react-aria": "^3.37.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "react-icons": "^5.4.0",
+    "usehooks-ts": "^3.1.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "daisyui": "^4.12.23",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
