--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@nextui-org/switch": "^2.2.8",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "first-app-innovare": "file:",
     "form-data": "^4.0.1",
     "formik": "^2.4.6",
@@ -28,6 +30,7 @@
     "openai": "^4.80.1",
     "react": "^19.0.0",
     "react-aria": "^3.37.0",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "usehooks-ts": "^3.1.0",
