--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@nextui-org/switch": "^2.2.8",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
@@ -33,6 +36,7 @@
     "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "stripe": "^17.6.0",
     "usehooks-ts": "^3.1.0",
     "yup": "^1.6.1"
   },
